--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "axios": "^0.21.1",
+    "flowbite": "^1.6.5",
     "katex": "^0.16.0",
     "kothing-editor": "^0.1.4",
     "svelte": "^3.44.0",
