--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gauravtestmail7@gmail.com
-spring.mail.password=ebcnrjsneonjzkoy
+spring.mail.username=neeraj@coact.co.in
+spring.mail.password=wergcylxkznewmkg
 spring.mail.sendername=Rozmer Support
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
