Added properties missing

--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -20,7 +20,8 @@ spring.mail.password=ixzxoobvxmkpwchq
 spring.mail.sendername=Rozmer Support
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-project.image=images/
+project.image.posts=images/posts
+project.image.profile=images/profile
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 #Dev Mode
